# OpenSTD_Spider

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-publish.yml
openstd_spider/: __init__.py  __main__.py  captcha.py  cli.py  exception.py  pdf.py  request.py  schema.py  utils.py
openstd_spider/parse/: gb688.py  openstd.py
